第二次修改项目

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="汉堡包" content="多汁多彩的汉堡包" />
     <title>汉堡到家</title>
-    <script defer="defer" src="./static/js/main.363b8f83.js"></script>
-    <link href="/static/css/main.23b6def9.css" rel="stylesheet" />
+    <script defer="defer" src="./static/js/main.a35f0dd6.js"></script>
+    <link href="./static/css/main.23b6def9.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>您的浏览器不支持JavaScript.</noscript>
